# graduate-school

./: .gitignore  LICENSE  README.md  pyproject.toml
CoreMath/: MANIFEST.in  pyproject.toml
CoreMath/TradingMath/: __init__.pxd  __init__.py  extremal.pxd  extremal.pyx
backup/: combined_extremum.py  combined_extremum_with_entry_point.py  combined_extremum_with_entry_point_implement_func.py  combined_extremum_with_entry_point_implement_func_finish.py  correllation.py  extremum.py  gepotesa_2.py  merge_arg_sort.py  merge_extremum.py  merge_extremum_implement.py  split_extremum.py  trend_detection.py
backup/run/: __main__.py
core/: __init__.py  config.py  extremum.py  matches_extremum.py  sort.py
core/__run/: __main__.py
core/logger/: base_log.py  log.py
core/model/: real_time_simulator.py  v_1.py  v_10.py  v_11.py  v_12.py  v_13.py  v_14.py  v_2.py  v_3.py  v_4.py  v_5.py  v_6.py  v_7.py  v_8.py  v_9.py
core/suppose_1/: _description.txt  v_1.py  v_2.py  v_3.py  v_4.py  v_5.py
core/trend/: __init__.py  base_trend_point.py  combined_trend_point.py  merge_trend_point.py  split_trend_point.py
core/visualization/: __init__.py  plot_trend_point.py
core_math/: extremum.py  merge_arg_sort.py  trend_detection.py
docs/ROMM/: Автореферат 25.doc
docs/ROMM/Автореферат и диссертация/: Автореферат_окон.doc  Автореферат_окон_без подписей.doc
docs/ROMM/Автореферат и диссертация/Окончательный варианты/: Автореферат_окон.doc
docs/ROMM/Корякин/: ~$оект рецензии_Ромм_Семерникова.doc  ~WRL2290.tmp  ~WRL3211.tmp  КРАВЕЦ.doc  Проект рецензии_Ромм_Бовкун.doc  Проект рецензии_Ромм_Доронченко.doc  Проект рецензии_Ромм_Коваленко А.doc  Проект рецензии_Ромм_Семерникова.doc  Проект рецензии_Ромм_Сорокин_Дордопуло.doc  Проект рецензии_уч пособие Раскладкина_Ромм.doc
docs/ROMM/Корякин/Сборник_ЮФУ/: text2.doc
docs/ROMM/Корякин/статья1/: !card.DOC  !наимсов2005.doc  Выписка статья1.doc  Письмо статья1.doc  Письмо2 статья1.doc  Реферат статьи1.doc  Реферат2 статьи1.doc  Рецензия статья1.doc  Статья1.doc  Титутьный лист1 статья1.doc  Титутьный лист2 статья1.doc  рекомендация.doc
docs/ROMM/МАКС ПУТИВЦЕВ/: Тенденции на графиках.doc  Фигуры технического анализа[1].docx
finance/: load_finance_data.py
run/: __main__.py  combined_extremum.py  combined_extremum_with_entry_point.py  combined_extremum_with_entry_point_implement_func.py  combined_extremum_with_entry_point_implement_func_finish.py  correllation.py  main.py  main_merge_extremum.py  main_merge_extremum_4_pov.py  main_merge_new_operator_extremum.py  main_split_extremum.py  merge.py  merge_extremum.py  merge_extremum_implement.py  split_extremum.py
tests/: conftest.py  test_extremum.py  test_merge_arg_sort.py
